--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             function getNewWord() {
                 // Replace this with your actual word generation logic
                 const words = [
-                    "all", "are", "as", "ball", "be", "boy", "by", "come", "day", "did", "eat", "for", "get", "girl", "got", "had", "has", "her", "him", "his", "how", "if", "jump", "look", "man", "mom", "not", "now", "of", "or", "out", "play", "put", "ran", "read", "run", "sat", "saw", "say", "she", "sit", "then", "they", "this", "too", "us", "was", "went", "will", "yes"
+                    "to", "see", "this", "like", "is", "we", "the", "go", "a", "my", "first", "I", "was", "he", "had", "good"
                 ];
                 currentWord = words[Math.floor(Math.random() * words.length)];
                 $('#word-display').text(currentWord);
