--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             function getNewWord() {
                 // Replace this with your actual word generation logic
                 const words = [
-                    "to", "see", "this", "like", "is", "we", "the", "go", "a", "my", "first", "I", "was", "he", "had", "good", "and", "find", "for", "just", "many", "one", "she", "then"
+                    "are", "buy", "little", "said", "too", "up", "will", "you"
                 ];
                 currentWord = words[Math.floor(Math.random() * words.length)];
                 $('#word-display').text(currentWord);
