--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             function getNewWord() {
                 // Replace this with your actual word generation logic
                 const words = [
-                    "do", "live", "of", "our", "wants", "what", "with", "your"
-                ];
+                "about", "eat", "how", "make", "out", "put", "takes", "who"
+            ];
                 currentWord = words[Math.floor(Math.random() * words.length)];
                 $('#word-display').text(currentWord);
             }
