--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             function getNewWord() {
                 // Replace this with your actual word generation logic
                 const words = [
-                "go", "then", "is", "are", "this", "buy", "like", "little", "see", "said", "the", "too", "we", "up", "to", "will", "a", "you", "my", "do", "first", "live", "I", "of", "was", "our", "he", "wants", "had", "what", "good", "with", "and", "your", "find", "about", "for", "eat", "just", "how", "many", "make", "one", "out", "she", "put", "who", "takes"
+                "day", "every", "fly", "have", "look", "made", "they", "write"
             ];
                 currentWord = words[Math.floor(Math.random() * words.length)];
                 $('#word-display').text(currentWord);
