--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             function getNewWord() {
                 // Replace this with your actual word generation logic
                 const words = [
-                "day", "every", "fly", "have", "look", "made", "they", "write"
+                "all", "down", "four", "from", "her", "now", "saw", "went"
             ];
                 currentWord = words[Math.floor(Math.random() * words.length)];
                 $('#word-display').text(currentWord);
